Bug 1524193 - Make audio wakelocks put background tabs into the normal priority bucket. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D19502